@@ -48,7 +48,7 @@ choice
 
 	config DS_TYPE_FON_WLAN_7170
 		depends on DS_AVM_VERSION_04_29
-		select DS_LIB_libgcc_s
+		#select DS_LIB_libgcc_s
 		bool "Fon WLAN 7170"
 	
 	config DS_TYPE_WLAN_3131
