@@ -1,6 +1,6 @@
 config DS_PACKAGE_JAMVM
 	bool "jamvm 1.4.4 (binary only)"
-	select DS_PACKAGE_classpath
+	select DS_PACKAGE_CLASSPATH
 	select DS_LIB_libffi
 	default n
 	help
